--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                 <label class="labelInfo">Sobre mim</label>
             </div>
             <div class="divInfos" style="font-size: 12px; font-family: Arial, Helvetica, sans-serif">
-                Atualmente sou estagiária de desenvolvimento na Indústrias Nucleares do Brasil (INB), 
-                tenho 20 anos e sou de Resende. Curso meu 6° período de Sistemas da Informação na AEDB. Busco sempre
-                aprimorar meus conhecimentos, fazendo cursos onlines. 
+                Graduada em Sistemas de Informação, desenvolvo software na I3Automations. Comprometida, com experiência e sempre em busca de soluções inovadoras.
             </div>
         </div>
     </div>
@@ -98,11 +96,15 @@
                     </texto>
                         <br/>
                         <br/>
-                    <li style="font-size: 15px; ">ABRIL DE 2022 – ATUAL</li>
+                    <li style="font-size: 15px; ">ABRIL DE 2022 – NOVEMBRO DE 2023</li>
                     <p style="font-weight: bold; font-size:13px; color: #01a5b1;">ESTAGIÁRIA, INDÚSTRIAS NUCLEARES DO BRASIL</p>
                     <texto style="font-size: 12px;">Participação em análise de Sistemas, desenvolvimento e manutenção de Sistemas, criação de 
                         novas aplicações, testes de sistemas, preparação de documentação para o usuário final, 
                         suporte em ERP implementação e desenvolvimento web utilizando .NET e C#
+                    </texto>
+                    <li style="font-size: 15px; ">DEZEMBRO DE 2023 – ATUAL</li>
+                    <p style="font-weight: bold; font-size:13px; color: #01a5b1;">DESENVOLVEDORA DE SOFTWARE, I3AUTOMATIONS</p>
+                    <texto style="font-size: 12px;">Desenvolvimento sistemas de automação, incluindo sistemas supervisórios para subestações, utilizando Python e o software Ignition.
                     </texto>
                 </ul>
             </div>
@@ -126,7 +128,7 @@
                     </p>
                     <texto style="font-size: 12px;">
                         Sistemas de Informação <br/>
-                        Data prevista para o término: dezembro de 2023
+                        Término: Dezembro de 2023
                     </texto>
                     
                 </ul>
