--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     </nav>
     <br />
   
-
     <div class="divPerfil">
 
         <div class="card">
@@ -118,19 +117,28 @@
             <div class="divInfos">
                 <ul>
                     <li style="font-size: 15px; ">DEZEMBRO, 2019</li>
-                    <p style="font-weight: bold; font-size:13px; color: #01a5b1;">ENSINO MÉDIO COMPLETO, COLÉGIO ESTADUAL OLAVO BILAC – RESENDE –
+                    <p style="font-weight: bold; font-size:13px; color: #01a5b1;">
+                        ENSINO MÉDIO COMPLETO, COLÉGIO ESTADUAL OLAVO BILAC – RESENDE –
                         RJ
                     </p>
-                    <br/>
-                    <br/>
+                    <br />
+                    <br />
                     <li style="font-size: 15px; ">MARÇO, 2020</li>
-                    <p style="font-weight: bold; font-size:13px; color: #01a5b1;">ENSINO SUPERIOR, ASSOCIAÇÃO EDUCACIONAL DOM BOSCO – RESENDE – RJ
+                    <p style="font-weight: bold; font-size:13px; color: #01a5b1;">
+                        ENSINO SUPERIOR, ASSOCIAÇÃO EDUCACIONAL DOM BOSCO – RESENDE – RJ
                     </p>
                     <texto style="font-size: 12px;">
-                        Sistemas de Informação <br/>
+                        Sistemas de Informação <br />
                         Término: Dezembro de 2023
                     </texto>
-                    
+                    <li style="font-size: 15px; ">JUNHO, 2025</li>
+                    <p style="font-weight: bold; font-size:13px; color: #01a5b1;">
+                        PÓS GRADUAÇÃO, FIAP – ONLINE
+                    </p>
+                    <texto style="font-size: 12px;">
+                        Desenvolvimento Full-Stack<br />
+                    </texto>
+
                 </ul>
             </div>
         </div>
