--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
                         ENSINO MÉDIO COMPLETO, COLÉGIO ESTADUAL OLAVO BILAC – RESENDE –
                         RJ
                     </p>
-                    <br />
-                    <br />
+                    <br/>
                     <li style="font-size: 15px; ">MARÇO, 2020</li>
                     <p style="font-weight: bold; font-size:13px; color: #01a5b1;">
                         ENSINO SUPERIOR, ASSOCIAÇÃO EDUCACIONAL DOM BOSCO – RESENDE – RJ
@@ -131,12 +130,14 @@
                         Sistemas de Informação <br />
                         Término: Dezembro de 2023
                     </texto>
+                    <br/>
+                    <br/>
                     <li style="font-size: 15px; ">JUNHO, 2025</li>
                     <p style="font-weight: bold; font-size:13px; color: #01a5b1;">
                         PÓS GRADUAÇÃO, FIAP – ONLINE
                     </p>
                     <texto style="font-size: 12px;">
-                        Desenvolvimento Full-Stack<br />
+                        Desenvolvimento Full-Stack
                     </texto>
 
                 </ul>
